# ISTravel

./: CMakeLists.txt  README.md
Relatório/: myheader.sty  relat.aux  relat.toc
Relatório/Dia/: fluxGetMapFromFile.dia  fluxGetTime.dia
Relatório/codigo/: Bridge.h  Defs.c  Graph.h  Heap.c  Utilities.h
Relatório/imagens/: FluxMain.eps  classes.eps  fluxDijkstra.eps  heap.eps
doc/: ._myheader.sty  ._relat.tex
doc/Dia/: graph.dia
doc/codigo/: Defs.h  Graph.c  LinkedList.c  makefile
doc/imagens/: fluxGetTime.eps  ist.eps
doc/relatorio/: relatorio.tex
doc/relatorio/codigo/: ._Heap.h  Bridge.h  Defs.h  Graph.c  Graph.h  Heap.h  LinkedList.h  Utilities.c  Utilities.h
doc/relatorio/imagens/: FluxComputeBestPath.dia  FluxComputeBestPath.eps  classes.dia  fluxDijkstra.dia  fluxGetMapFromFile.eps  graph.eps  linkedList.eps
projetoAED/: Bridge.h  ISTravel.c  LinkedList.h  example.cli  verify.sh
projetoAED/Dia/: FluxMain.dia  heap.dia
projetoAED/exemplos/: sm2.sol  tx1.sol
projetoAED/unusedFiles/: Heap.c  Heap.h  WeightedInteger.c  WeightedInteger.h
src/: Bridge.c  Bridge.h  Defs.c  Defs.h  Graph.h  Heap.c  Heap.h  ISTravel.c  LinkedList.c  LinkedList.h  Utilities.c  Utilities.h
tests/pack0/: complete.solx
tests/pack1/: enunciado.sol  rnd500.cli  rnd500.sol  rnd500.solx  swtno.sol  w12.sol  w50.sol
tests/pack2/: rnd500.map
